[package]
name = "idgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 2
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 16