[package]
name = "authentication"
version = "0.1.0"
edition = "2021"
author = ["gixpi </>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "authenticationlib"
path = "src/lib.rs"

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.9"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
idgen = {path="../../libs/idgen"}
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
# redis = { version = "0.23.0", features = ["tokio-comp"] }
serde_json = "1.0.96"
bb8-redis = "0.13.0"
bb8 = "0.8.0"
regex = "1.8.3"

[build-dependencies]
tonic-build = "0.9"
