[package]
name = "authentication"
version = "0.1.0"
edition = "2021"
author = ["gixpi </>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "authenticationlib"
path = "src/lib.rs"

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.9"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.15", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
idgen = {path="../../libs/idgen"}
thiserror = "1.0.43"
serde = { version = "1.0.171", features = ["derive"] }
# redis = { version = "0.23.0", features = ["tokio-comp"] }
serde_json = "1.0.103"
bb8-redis = "0.13.1"
bb8 = "0.8.1"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }

[build-dependencies]
tonic-build = "0.9"
