[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "connectorlib"
path = "src/lib.rs"

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.3.15", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
idgen = {path="../../libs/idgen"}
thiserror = "1.0.47"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[build-dependencies]
tonic-build = "0.10.0"
