[package]
name = "device_authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "device_authenticationlib"
path = "src/lib.rs"

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.9"
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.3.21", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
idgen = {path="../../libs/idgen"}
thiserror = "1.0.47"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
regex = "1.9.3"

[build-dependencies]
tonic-build = "0.9"
