[package]
name = "rback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.9"
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.0", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1.0.47"
serde = { version = "1.0.188", features = ["derive"] }
# redis = { version = "0.23.0", features = ["tokio-comp"] }
serde_json = "1.0.105"
regex = "1.9.3"

[build-dependencies]
tonic-build = "0.9"
