[package]
name = "rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "rtslib"

[registries.crates-io]
protocol = "sparse"

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.3", features = ["derive"] }
chrono = { version = "0.4.30", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

[build-dependencies]
tonic-build = "0.10.0"
